#730: correct tests